# AI_Desktop

ai-conversation-app/: package.json
ai-conversation-app/config/: config.yaml
ai-conversation-app/src/: App.css  App.tsx  main.tsx
ai-conversation-app/src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
ai-conversation-app/src-tauri/src/: lib.rs  main.rs
ai-conversation-app/src-tauri/src/audio/: mod.rs  processor.rs  stt.rs  tts.rs
ai-conversation-app/src-tauri/src/config/: mod.rs
ai-conversation-app/src/components/Character/: Character.tsx
ai-conversation-app/src/components/SidePanel/: SidePanel.css  SidePanel.tsx
ai-conversation-app/src/hooks/: index.ts  useCharacterAnimation.ts  useLipSync.ts
ai-conversation-app/src/pages/: SidePanelPage.tsx
ai-conversation-app/src/types/: audio.ts  three-fiber.d.ts  three.d.ts
